Added more content to page

--- a/index.html
+++ b/index.html
@@ -228,11 +228,45 @@
     <!-- SECTION: Intro -->
     <section class="section-mb--lg">
       <div class="intro">
-        <div class="intro__box-1"></div>
+        <div class="intro__box-1">
+          <img class="intro__box-logo" src="/images/icons/tnw-logo.svg" alt="">
+          <div class="intro__box-content">
+            <span class="intro__box-content-category">Tech</span>
+            <h2 class="intro__box-content-title">
+              Will we ever find Planet 9? The mystery that could lie at the edge
+              of our solar system
+            </h2>
+            <span class="intro__box-content-details">
+              by The Markup 6 hours ago 0
+            </span>
+          </div>
+        </div>
 
-        <div class="intro__box-2"></div>
+        <div class="intro__box-2">
+          <div class="intro__box-content">
+            <span class="intro__box-content-category">Tech</span>
+            <h2 class="intro__box-content-title">
+              Will we ever find Planet 9? The mystery that could lie at the edge
+              of our solar system
+            </h2>
+            <span class="intro__box-content-details">
+              by The Markup 6 hours ago 0
+            </span>
+          </div>
+        </div>
 
-        <div class="intro__box-3"></div>
+        <div class="intro__box-3">
+          <div class="intro__box-content">
+            <span class="intro__box-content-category">Tech</span>
+            <h2 class="intro__box-content-title">
+              Will we ever find Planet 9? The mystery that could lie at the edge
+              of our solar system
+            </h2>
+            <span class="intro__box-content-details">
+              by The Markup 6 hours ago 0
+            </span>
+          </div>
+        </div>
       </div>
     </section>
     <!-- SECTION: Intro -->
@@ -391,15 +425,115 @@
     <!-- END SECTION: Latest news -->
 
     <!-- SECTION: Latest funding rounds on Index.co -->
-    <section>
+    <section class="section-mb--lg">
       <div class="container">
-        <div class="funding-card">
-          <div class="funding-card__bar--red">
-            <h4>Lorem ipsum</h4>
+        <div class="funding-card__wrapper">
+          <div class="funding-card">
+            <div class="funding-card__bar--red">
+              <img
+                class="funding-card__img"
+                src="/images/placeholder-7.jpg"
+                alt="placeholder 7"
+              />
+              <h4>Magicpin</h4>
+            </div>
+
+            <div class="funding-card__bar--light-red">
+              <h4>$7M</h4>
+              <h6>Venture Capital</h6>
+            </div>
+
+            <div>
+              <ul class="funding-card__list">
+                <li>retail</li>
+                <li>samsung venture investment</li>
+                <li>
+                  Samsung’s venture arm invests in hyperlocal discovery startup
+                  Magicpin on VCCircle
+                </li>
+              </ul>
+            </div>
           </div>
 
-          <div class="funding-card__bar--light-red">
-            <h4>$200M</h4>
+          <div class="funding-card">
+            <div class="funding-card__bar--red">
+              <img
+                class="funding-card__img"
+                src="/images/placeholder-7.jpg"
+                alt="placeholder 7"
+              />
+              <h4>Magicpin</h4>
+            </div>
+
+            <div class="funding-card__bar--light-red">
+              <h4>$7M</h4>
+              <h6>Venture Capital</h6>
+            </div>
+
+            <div>
+              <ul class="funding-card__list">
+                <li>retail</li>
+                <li>samsung venture investment</li>
+                <li>
+                  Samsung’s venture arm invests in hyperlocal discovery startup
+                  Magicpin on VCCircle
+                </li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="funding-card">
+            <div class="funding-card__bar--red">
+              <img
+                class="funding-card__img"
+                src="/images/placeholder-7.jpg"
+                alt="placeholder 7"
+              />
+              <h4>Magicpin</h4>
+            </div>
+
+            <div class="funding-card__bar--light-red">
+              <h4>$7M</h4>
+              <h6>Venture Capital</h6>
+            </div>
+
+            <div>
+              <ul class="funding-card__list">
+                <li>retail</li>
+                <li>samsung venture investment</li>
+                <li>
+                  Samsung’s venture arm invests in hyperlocal discovery startup
+                  Magicpin on VCCircle
+                </li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="funding-card">
+            <div class="funding-card__bar--red">
+              <img
+                class="funding-card__img"
+                src="/images/placeholder-7.jpg"
+                alt="placeholder 7"
+              />
+              <h4>Magicpin</h4>
+            </div>
+
+            <div class="funding-card__bar--light-red">
+              <h4>$7M</h4>
+              <h6>Venture Capital</h6>
+            </div>
+
+            <div>
+              <ul class="funding-card__list">
+                <li>retail</li>
+                <li>samsung venture investment</li>
+                <li>
+                  Samsung’s venture arm invests in hyperlocal discovery startup
+                  Magicpin on VCCircle
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
