--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <link rel="stylesheet" href="/csshelpers.css" />
 
-    <!-- Stylesheet -->
+    <!-- My Stylesheet -->
     <link rel="stylesheet" href="/style.css" />
 
     <title>TNW</title>
@@ -229,7 +229,11 @@
     <section class="section-mb--lg">
       <div class="intro">
         <div class="intro__box-1">
-          <img class="intro__box-logo" src="/images/icons/tnw-logo.svg" alt="">
+          <img
+            class="intro__box-logo"
+            src="/images/icons/tnw-logo.svg"
+            alt=""
+          />
           <div class="intro__box-content">
             <span class="intro__box-content-category">Tech</span>
             <h2 class="intro__box-content-title">
@@ -276,9 +280,7 @@
       <div class="container">
         <div class="section-title__container title-mb--lg">
           <h2 class="section-title">
-            <a href="#none">
-              Latest news
-            </a>
+            <a href="#none"> Latest news </a>
           </h2>
           <span class="arrow--right"></span>
         </div>
@@ -547,9 +549,7 @@
           <div class="article-column">
             <div class="section-title__container title-mb--md">
               <h2 class="section-title">
-                <a href="#none">
-                  Hard Fork
-                </a>
+                <a href="#none"> Hard Fork </a>
               </h2>
               <span class="arrow--right"></span>
             </div>
@@ -626,9 +626,7 @@
           <div class="article-column">
             <div class="section-title__container title-mb--md">
               <h2 class="section-title">
-                <a href="#none">
-                  Apps
-                </a>
+                <a href="#none"> Apps </a>
               </h2>
               <span class="arrow--right"></span>
             </div>
@@ -705,9 +703,7 @@
           <div class="article-column">
             <div class="section-title__container title-mb--md">
               <h2 class="section-title">
-                <a href="#none">
-                  Gear
-                </a>
+                <a href="#none"> Gear </a>
               </h2>
               <span class="arrow--right"></span>
             </div>
@@ -784,9 +780,7 @@
           <div class="article-column">
             <div class="section-title__container title-mb--md">
               <h2 class="section-title">
-                <a href="#none">
-                  Tech
-                </a>
+                <a href="#none"> Tech </a>
               </h2>
               <span class="arrow--right"></span>
             </div>
@@ -863,9 +857,7 @@
           <div class="article-column">
             <div class="section-title__container title-mb--md">
               <h2 class="section-title">
-                <a href="#none">
-                  Creative
-                </a>
+                <a href="#none"> Creative </a>
               </h2>
               <span class="arrow--right"></span>
             </div>
@@ -942,9 +934,7 @@
           <div class="article-column">
             <div class="section-title__container title-mb--md">
               <h2 class="section-title">
-                <a href="#none">
-                  Podium
-                </a>
+                <a href="#none"> Podium </a>
               </h2>
               <span class="arrow--right"></span>
             </div>
@@ -1021,9 +1011,7 @@
           <div class="article-column">
             <div class="section-title__container title-mb--md">
               <h2 class="section-title">
-                <a href="#none">
-                  Insights
-                </a>
+                <a href="#none"> Insights </a>
               </h2>
               <span class="arrow--right"></span>
             </div>
@@ -1100,9 +1088,7 @@
           <div class="article-column">
             <div class="section-title__container title-mb--md">
               <h2 class="section-title">
-                <a href="#none">
-                  Launch
-                </a>
+                <a href="#none"> Launch </a>
               </h2>
               <span class="arrow--right"></span>
             </div>
@@ -1179,9 +1165,7 @@
           <div class="article-column">
             <div class="section-title__container title-mb--md">
               <h2 class="section-title">
-                <a href="#none">
-                  Distract
-                </a>
+                <a href="#none"> Distract </a>
               </h2>
               <span class="arrow--right"></span>
             </div>
@@ -1265,9 +1249,7 @@
         >
           <div class="section-title__container">
             <h2 class="section-title">
-              <a href="#none">
-                Latest deals
-              </a>
+              <a href="#none"> Latest deals </a>
             </h2>
             <span class="arrow--right"></span>
           </div>
@@ -1461,29 +1443,19 @@
 
         <ul class="footer__word-links">
           <li>
-            <a href="#none">
-              events
-            </a>
+            <a href="#none"> events </a>
           </li>
           <li>
-            <a href="#none">
-              about
-            </a>
+            <a href="#none"> about </a>
           </li>
           <li>
-            <a href="#none">
-              advertise
-            </a>
+            <a href="#none"> advertise </a>
           </li>
           <li>
-            <a href="#none">
-              jobs
-            </a>
+            <a href="#none"> jobs </a>
           </li>
           <li>
-            <a href="#none">
-              contact
-            </a>
+            <a href="#none"> contact </a>
           </li>
         </ul>
       </div>
@@ -1502,7 +1474,7 @@
 
         <span class="footer__legal-content">
           Made with
-          <b style="color: var(--red);"> ♥ </b>
+          <b style="color: var(--red)"> ♥ </b>
           in Amsterdam.
         </span>
 
